# hass-lifx-ceiling

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: claude-code-review.yml  claude.yml  lint.yml  release.yml  tests.yml  validate.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
custom_components/lifx_ceiling/: __init__.py  api.py  const.py  coordinator.py  light.py  manifest.json  services.yaml  strings.json  util.py
custom_components/lifx_ceiling/translations/: en.json
docs/: API.md  DEVELOPMENT.md  INDEX.md
tests/: __init__.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_light.py  test_util.py  test_util_async.py
